[gd_scene load_steps=15 format=3 uid="uid://cdjxmp0p1bbup"]

[ext_resource type="Script" path="res://addons/csg_toolkit/scripts/csg_toolkit_bar.gd" id="1_guypd"]
[ext_resource type="Texture2D" uid="uid://cjxx30pcamj36" path="res://addons/csg_toolkit/res/icons/box.svg" id="2_iwjnu"]
[ext_resource type="Texture2D" uid="uid://dioxt3oaqvsi3" path="res://addons/csg_toolkit/res/icons/cyliner.svg" id="3_tedev"]
[ext_resource type="Texture2D" uid="uid://bnpu878eanspj" path="res://addons/csg_toolkit/res/icons/mesh.svg" id="4_8ifcb"]
[ext_resource type="Texture2D" uid="uid://cjps2pofcsfc0" path="res://addons/csg_toolkit/res/icons/polygon.svg" id="5_cc45h"]
[ext_resource type="Texture2D" uid="uid://kpld1ou63wlf" path="res://addons/csg_toolkit/res/icons/sphere.svg" id="6_lwspd"]
[ext_resource type="Texture2D" uid="uid://gbgmyv4bknqo" path="res://addons/csg_toolkit/res/icons/torus.svg" id="7_t1wb8"]
[ext_resource type="Texture2D" uid="uid://sc7itwu80oi3" path="res://addons/csg_toolkit/res/icons/union.svg" id="8_4756x"]
[ext_resource type="Texture2D" uid="uid://2kohi3tb3c70" path="res://addons/csg_toolkit/res/icons/intersection.svg" id="9_oukxm"]
[ext_resource type="Texture2D" uid="uid://snbhkpq6sh4j" path="res://addons/csg_toolkit/res/icons/subtraction.svg" id="10_tb1b3"]
[ext_resource type="Texture2D" uid="uid://clgooji83dl4u" path="res://addons/csg_toolkit/res/icons/config.svg" id="11_5p6ju"]
[ext_resource type="Texture2D" uid="uid://cg5jbylrlg00x" path="res://addons/csg_toolkit/res/icons/empty-material.svg" id="11_r00bg"]

[sub_resource type="ButtonGroup" id="ButtonGroup_2ipgb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ixko7"]

[node name="CsgToolkitBar" type="Control"]
visible = false
custom_minimum_size = Vector2(52, 0)
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_guypd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1

[node name="CSG" type="VBoxContainer" parent="MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Box" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/CSG"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Box"
icon = ExtResource("2_iwjnu")
icon_alignment = 1
expand_icon = true

[node name="Cylinder" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/CSG"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Cylinder"
theme_override_constants/icon_max_width = 24
icon = ExtResource("3_tedev")
icon_alignment = 1
expand_icon = true

[node name="Mesh" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/CSG"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Mesh"
theme_override_constants/icon_max_width = 24
icon = ExtResource("4_8ifcb")
icon_alignment = 1
expand_icon = true

[node name="Polygon" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/CSG"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Polygon"
theme_override_constants/icon_max_width = 24
icon = ExtResource("5_cc45h")
icon_alignment = 1
expand_icon = true

[node name="Sphere" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/CSG"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Sphere"
theme_override_constants/icon_max_width = 24
icon = ExtResource("6_lwspd")
icon_alignment = 1
expand_icon = true

[node name="Torus" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/CSG"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Torus"
theme_override_constants/icon_max_width = 24
icon = ExtResource("7_t1wb8")
icon_alignment = 1
expand_icon = true

[node name="Operation" type="VBoxContainer" parent="MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Union" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/Operation"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Union"
theme_override_constants/icon_max_width = 24
toggle_mode = true
button_group = SubResource("ButtonGroup_2ipgb")
icon = ExtResource("8_4756x")
icon_alignment = 1
expand_icon = true

[node name="Intersection" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/Operation"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Intersection"
theme_override_constants/icon_max_width = 24
toggle_mode = true
button_group = SubResource("ButtonGroup_2ipgb")
icon = ExtResource("9_oukxm")
icon_alignment = 1
expand_icon = true

[node name="Subtraction" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/Operation"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Subtraction"
theme_override_constants/icon_max_width = 24
toggle_mode = true
button_group = SubResource("ButtonGroup_2ipgb")
icon = ExtResource("10_tb1b3")
icon_alignment = 1
expand_icon = true

[node name="Material" type="VBoxContainer" parent="MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MaterialPicker" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/Material"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Material"
icon = ExtResource("11_r00bg")
icon_alignment = 1
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_ixko7")

[node name="Options" type="VBoxContainer" parent="MarginContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Config" type="Button" parent="MarginContainer/ScrollContainer/HBoxContainer/Options"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
tooltip_text = "Config"
theme_override_constants/icon_max_width = 24
icon = ExtResource("11_5p6ju")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/CSG/Box" to="." method="_on_box_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/CSG/Cylinder" to="." method="_on_cylinder_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/CSG/Mesh" to="." method="_on_mesh_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/CSG/Polygon" to="." method="_on_polygon_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/CSG/Sphere" to="." method="_on_sphere_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/CSG/Torus" to="." method="_on_torus_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/Operation/Union" to="." method="_on_operation_pressed" binds= [0]]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/Operation/Intersection" to="." method="_on_operation_pressed" binds= [1]]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/Operation/Subtraction" to="." method="_on_operation_pressed" binds= [2]]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/Material/MaterialPicker" to="." method="_request_material"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/HBoxContainer/Options/Config" to="." method="_on_config_pressed"]
